Prevent overflow

--- a/src/main/webapp/resources/core/css/MasterDetails.css
+++ b/src/main/webapp/resources/core/css/MasterDetails.css
@@ -90,6 +90,7 @@ nav a{
     height: 100%;
     padding: 0;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #divDetailView h3{
